src/test/ui/macros/unknown-builtin.stderr
error: cannot find a built-in macro with name `unknown`
  --> $DIR/unknown-builtin.rs:6:1
   |
LL | macro_rules! unknown { () => () }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: cannot find a built-in macro with name `line`
  --> $SRC_DIR/libcore/macros/mod.rs:LL:COL
   |
LL | /     macro_rules! line {
LL | |         () => {
LL | |             /* compiler built-in */
LL | |         };
LL | |     }
   | |_____^

error: aborting due to 2 previous errors

